# aiview-by-et

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  eslint.config.mjs  package-lock.json  package.json  spec.md
.github/workflows/: ci.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: main.ts  ollama.ts  preload.ts  sidecar.ts  (+2 more)
apps/renderer/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: AI_MODELS.md  ARCHITECTURE.md  DATA_SOURCES.md  FEATURES.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  ROADMAP.md  TDD.md
engine/: pyi_entry.py  pyproject.toml
engine/app/: main.py  models.py
engine/app/ai/: base.py  cloud.py  indicator_gen.py  ollama.py  orchestrator.py  recommended.py
engine/app/ai/prompts/: analyze.md  indicator.md
engine/app/api/: app.py
engine/app/data/: base.py  binance.py  resample.py  service.py  timeframes.py  twelvedata.py
engine/app/indicators/: base.py  basic.py  dsl.py  registry.py  smc.py  zero_lag.py
engine/app/sim/: backtest.py  benchmark.py  fill.py  paper.py  stats.py  strategy.py
engine/app/store/: db.py
engine/tests/: conftest.py  fakes.py  test_ai.py  test_benchmark.py  test_binance_mapping.py  test_cloud_providers.py  test_data_api.py  test_db.py  test_dsl.py  test_health.py  test_indicator_ai.py  test_indicators_api.py  test_indicators_basic.py  test_indicators_smc.py  test_resample.py  test_settings.py  test_sim_api.py  test_sim_backtest.py  test_sim_fill.py  test_sim_stats.py  test_twelvedata.py  test_ws.py
scripts/: prepare-package.mjs
(+32 files in other folders)
